[gd_scene load_steps=17 format=2]

[ext_resource path="res://scripts/Tutorial.gd" type="Script" id=1]
[ext_resource path="res://fonts/Bungee-Shade.otf" type="DynamicFontData" id=2]
[ext_resource path="res://fonts/Bungee-Regular.otf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/mouse-left-click.png" type="Texture" id=4]
[ext_resource path="res://assets/ff_master_tile_sheet.png" type="Texture" id=5]
[ext_resource path="res://scenes/Character.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/buttons/MenuButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/left-arrow.png" type="Texture" id=8]
[ext_resource path="res://assets/right-arrow.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 56
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="LineShape2D" id=3]
d = 2.98172

[sub_resource type="TileSet" id=4]
0/name = "ff_master_tile_sheet.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 32, 320, 64, 16 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0
1/name = "ff_master_tile_sheet.png 1"
1/texture = ExtResource( 5 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 16, 352, 16, 64 )
1/tile_mode = 2
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 16, 16 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [  ]
1/z_index = 0

[sub_resource type="LineShape2D" id=5]
normal = Vector2( 0, 1 )
d = 1.63075

[sub_resource type="LineShape2D" id=6]
normal = Vector2( 1, 0 )
d = 65.8525

[sub_resource type="LineShape2D" id=7]
normal = Vector2( -1, 0 )

[node name="Tutorial" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.292358
margin_top = -1.0
margin_right = 0.292358
margin_bottom = -1.0
script = ExtResource( 1 )

[node name="Tutorial Area" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 150.0
margin_top = 100.0
margin_right = -150.0
margin_bottom = -100.0
rect_min_size = Vector2( 300, 250 )

[node name="Label" type="Label" parent="Tutorial Area"]
margin_right = 980.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 1 )
text = "The Shotgun"
align = 1

[node name="CenterBox" type="HBoxContainer" parent="Tutorial Area"]
margin_top = 61.0
margin_right = 980.0
margin_bottom = 520.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Tutorial Area/CenterBox"]
margin_right = 488.0
margin_bottom = 459.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Tutorial Area/CenterBox/VBoxContainer"]
margin_right = 488.0
margin_bottom = 227.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
text = "Use your left mouse button to fire your weapon. PEW PEW"
valign = 1
autowrap = true

[node name="WASD" type="TextureRect" parent="Tutorial Area/CenterBox/VBoxContainer"]
margin_top = 231.0
margin_right = 488.0
margin_bottom = 459.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
stretch_mode = 6

[node name="VBoxContainer2" type="VBoxContainer" parent="Tutorial Area/CenterBox"]
margin_left = 492.0
margin_right = 980.0
margin_bottom = 459.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CharacterBoundary" type="StaticBody2D" parent="Tutorial Area/CenterBox/VBoxContainer2" groups=[
"TileMapHookable",
]]
position = Vector2( 106, 90 )
collision_layer = 3
collision_mask = 3

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="Tutorial Area/CenterBox/VBoxContainer2/CharacterBoundary" groups=[
"TileMapHookable",
]]
position = Vector2( 175.186, 268.357 )
scale = Vector2( 1.1479, 2.25254 )
shape = SubResource( 3 )

[node name="TileMap" type="TileMap" parent="Tutorial Area/CenterBox/VBoxContainer2/CharacterBoundary"]
tile_set = SubResource( 4 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 131075, 1, 0, 131076, 536870912, 1, 131077, 536870912, 1, 131078, 536870912, 1, 131079, 536870912, 1, 131080, 536870912, 1, 131081, 536870912, 1, 131082, 536870912, 1, 131083, 536870912, 1, 131084, 536870912, 1, 131085, 536870912, 1, 131086, 536870912, 1, 131087, 536870912, 1, 131088, 536870912, 1, 131089, 536870912, 1, 131090, 536870913, 0, 196611, 1, 65536, 196626, 536870913, 65536, 262147, 1, 65536, 262162, 536870913, 65536, 327683, 1, 65536, 327698, 536870913, 65536, 393219, 1, 65536, 393234, 536870913, 65536, 458755, 1, 65536, 458770, 536870913, 65536, 524291, 1, 65536, 524306, 536870913, 65536, 589827, 1, 65536, 589842, 536870913, 65536, 655363, 1, 65536, 655378, 536870913, 65536, 720899, 1, 65536, 720914, 536870913, 65536, 786435, 1, 65536, 786450, 536870913, 65536, 851971, 1, 65536, 851986, 536870913, 65536, 917507, 1, 65536, 917522, 536870913, 65536, 983043, 1, 65536, 983058, 536870913, 65536, 1048579, 536870912, 3, 1048580, 0, 1, 1048581, 0, 1, 1048582, 0, 1, 1048583, 0, 1, 1048584, 0, 1, 1048585, 0, 1, 1048586, 0, 1, 1048587, 0, 1, 1048588, 0, 1, 1048589, 0, 1, 1048590, 0, 1, 1048591, 0, 1, 1048592, 0, 1, 1048593, 0, 1, 1048594, 536870912, 0 )

[node name="CharacterBoundary2" type="StaticBody2D" parent="Tutorial Area/CenterBox/VBoxContainer2" groups=[
"TileMapHookable",
]]
position = Vector2( 24.9662, 14.8358 )
collision_layer = 3
collision_mask = 3

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="Tutorial Area/CenterBox/VBoxContainer2/CharacterBoundary2" groups=[
"TileMapHookable",
]]
position = Vector2( 257.301, 116.522 )
scale = Vector2( 1.1479, 2.25254 )
shape = SubResource( 5 )

[node name="CharacterBoundary3" type="StaticBody2D" parent="Tutorial Area/CenterBox/VBoxContainer2" groups=[
"TileMapHookable",
]]
position = Vector2( 24.9662, 14.8358 )
collision_layer = 3
collision_mask = 3

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="Tutorial Area/CenterBox/VBoxContainer2/CharacterBoundary3" groups=[
"TileMapHookable",
]]
position = Vector2( 65.3887, 237.537 )
scale = Vector2( 1.1479, 2.25254 )
shape = SubResource( 6 )

[node name="CharacterBoundary4" type="StaticBody2D" parent="Tutorial Area/CenterBox/VBoxContainer2" groups=[
"TileMapHookable",
]]
position = Vector2( 24.9662, 14.8358 )
collision_layer = 3
collision_mask = 3

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="Tutorial Area/CenterBox/VBoxContainer2/CharacterBoundary4" groups=[
"TileMapHookable",
]]
position = Vector2( 373.618, 250.318 )
scale = Vector2( 1.1479, 2.25254 )
shape = SubResource( 7 )

[node name="Character" parent="." instance=ExtResource( 6 )]
position = Vector2( 925, 400 )
projectile_scene_path = "res://scenes/Projectile.tscn"
hook_scene_path = "res://scenes/Hook.tscn"
movement_speed = 5000

[node name="LeftButton" parent="." instance=ExtResource( 7 )]
margin_left = 50.0
margin_top = 95.0
margin_right = 125.0
margin_bottom = 160.0
rect_min_size = Vector2( 0, 0 )
icon = ExtResource( 8 )
scene_to_load = "res://scenes/TutorialMove.tscn"

[node name="Bounce" type="Tween" parent="LeftButton"]
repeat = true
playback/repeat = true

[node name="RightButton" parent="." instance=ExtResource( 7 )]
margin_left = 1150.0
margin_top = 95.0
margin_right = 1225.0
margin_bottom = 160.0
rect_min_size = Vector2( 0, 0 )
icon = ExtResource( 9 )
scene_to_load = "res://scenes/TutorialHook.tscn"

[node name="Bounce" type="Tween" parent="RightButton"]
repeat = true
playback/repeat = true
[connection signal="pressed" from="LeftButton" to="." method="_on_LeftButton_pressed"]
[connection signal="pressed" from="RightButton" to="." method="_on_RightButton_pressed"]
